--- a/tgs2.html
+++ b/tgs2.html
@@ -224,7 +224,6 @@
         <div class="logo" aria-hidden="true">OS</div>
         <div>
           <h1 class="title">Pemahaman Sistem Operasi: Batch System, Critical Section, dan Lainnya</h1>
-          <p class="lead">Ringkasan konsep penting manajemen proses untuk tugas kuliah — siap dipublikasikan ke blog.</p>
         </div>
       </a>
 
@@ -312,7 +311,7 @@
     </main>
 
     <footer class="page-footer" role="contentinfo">
-      <div>© <span id="year"></span> Dzakwan — Artikel ini bisa kamu edit sebelum dipublikasikan ke blog pribadi.</div>
+      <div>© <span id="year"></span> Dzakwan Ageng Rahmatullah.</div>
     </footer>
   </div>
 
